# goit-pythonweb-hw-06

./: README.md  config.ini  config.py  db.py  my_select.py  pyproject.toml  seed.py  user.py  users.db
alembic/: env.py
alembic/versions/: 6164ac76530c_remove_student_email_test.py  9d9c0daf7f5a_initial_revision.py
models/: models.py
