[project]
name = "hw6"
version = "0.1.0"
description = "homework6"
authors = [
    {name = "vladshein",email = "vlshein1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "faker (>=37.6.0,<38.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
